# SPC-DT

./: .gitignore  README.md
Decicison Tree Generator/VISUALIZATION-FOR-SOLVING-NON-IMAGE-PROBLEMS-AND-SALIENCY-MAPPING-main/: CPC-R@backward.ipynb
Decicison Tree Generator/pythonProject2/: BreastCancerDecisionTree  MushroomDecisionTree  SimpleMushroomData.csv  SimpleMushroomData_tree  breast_cancer_tree  crossValidationMushroom.txt  helloWorld.pl  scikitlearnTests.py
Project_SPC_Ver5/: DT_BK_AW SW_1[641] -- AlexWorland Edits.docx  DT_BK_AW SW_1[641] -- Breast Cancer Addition.docx  OpenGL_on_a_Windows_Form.sln  Plotting Ideas Green Similar to Background.pptx  breast_cancer - Copy, single value.csv  breast_cancer - Copy.csv  breast_cancer.xls  parserBreastCancer - Copy.txt  parserBreastCancer.txt  parserSeeds.txt  seeds.csv  wine-data.csv
Project_SPC_Ver5/Data/: breast_cancer.xls  parserWineData.txt
Project_SPC_Ver5/Debug/: OpenGL_on_a_Windows_Form.exe.metagen
Project_SPC_Ver5/OpenGL_on_a_Windows_Form/: ClassData.h  (+14 more)
SPC-DT/: Alex Worland -- Andrew Dunn Demo Notes.docx  OpenGL_on_a_Windows_Form.sln  Wishlist-Alex’s MacBook Air.docx  Wishlist.docx  breast_cancer - Copy.csv  parserBreastCancer - Copy.txt  parserSeeds.txt  seeds.csv
SPC-DT/OpenGL_on_a_Windows_Form/: CMakeLists.txt  ClassData.h  Classification.h  ColorUtils.h  DrawingUtils.h  Edge.h  FileHandling.cpp  FileHandling.h  Form1.h  Form1.resx  InteractiveSPC.cpp  InteractiveSPC.h  OpenGL3.h  OpenGL_on_a_Windows_Form.vcxproj  OpenGL_on_a_Windows_Form.vcxproj.filters  Plot.h  UserRectangle.h  Zone.h  stdafx.h
(+293 files in other folders)
